ecmascript/parser/tests/test262-error-references/fail/f79162fafa44fde2.js.stderr
error: Expected a decimal digit
 --> $DIR/tests/test262-parser/fail/f79162fafa44fde2.js:1:3
  |
1 | 3ea
  |   ^

